--- a/2.img,table.html
+++ b/2.img,table.html
@@ -2,14 +2,15 @@
 
 <html>
 	<head>
-		<title>Navya</title>
+		<title>mail-link,img,table</title>
 	</head>
 
 	<body>
-	<a href="mailto:navyaratna.deepika14@gmail.com" title="Awesome girl">Here</a> <!--Tool tip-->
+	<a href="mailto:navyaratna.deepika14@gmail.com" title="This is called tool tip">Move the cursor here</a> 
+	<!--Comments-->
 		<p>Hello</p>
 
-		<a href="http://google.com"><img src="2016-10-30-18-53-38-899.jpg" height="150"/></a>
+		<a href="http://google.com"><img src="taylor.jpg" height="150"/></a>
 
 		<table border="1" width="300" cellpadding="10" cellspacing="5"> <!-- width="100%"-->
 		<tr><th colspan="3"><h4>Table</h4></th></tr>
