--- a/4.lists.html
+++ b/4.lists.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<title>lists</title>
+	<style type="text/css">
+		ul {font-weight: bold;}
+		ol {font-style: italic;}
+	</style>
 </head>
 <body>
 <ul>
