--- a/4.lists.html
+++ b/4.lists.html
@@ -3,8 +3,20 @@
 <head>
 	<title>lists</title>
 	<style type="text/css">
-		ul {font-weight: bold;}
-		ol {font-style: italic;}
+		ul {
+			font-weight: bold;
+			color: white;
+		}
+		ol {
+			font-style: italic;
+			color: white
+		}
+		body {
+			background-image:url(taylor.jpg);
+			background-size: 80%;
+			background-repeat: no-repeat;
+			background-position: 10px 10px 10px 10px;
+		}
 	</style>
 </head>
 <body>
