--- a/4.lists.html
+++ b/4.lists.html
@@ -13,9 +13,9 @@
 		}
 		body {
 			background-image:url(taylor.jpg);
-			background-size: 80%;
+			background-size: 100%;
 			background-repeat: no-repeat;
-			background-position: 10px 10px 10px 10px;
+			background-position: 10px 10px;
 		}
 	</style>
 </head>
