--- a/7.padding.html
+++ b/7.padding.html
@@ -3,6 +3,9 @@
 <head>
 	<title>Padding</title>
 	<style type="text/css">
+		h2 {
+			border :3px dotted pink;
+		}
 		h1 {
 			background-color: yellow;
 			padding: 20px;
@@ -10,15 +13,20 @@
 			border-top-style: dotted;
 			border-top-width: 2px;
 			margin: 100px;
+			color: blue;
+			width: 400px;
 		}
 	</style>
 </head>
 <body>
+<h2>all in 1</h2>
 <h1>I'm Navya</h1>
 <h1>2nd para</h1>
+<h1>3rd para</h1>
 </body>
 </html>
 			<!--attributes:
+			height: 100px;
 			padding-top: 12px;
 			padding-left: 10px;
 			padding-bottom: 5px;
