--- a/2.img,table.html
+++ b/2.img,table.html
@@ -6,9 +6,11 @@
 	</head>
 
 	<body>
-	<a href="mailto:navyaratna.deepika14@gmail.com" title="This is called tool tip">Move the cursor here</a> 
+	<a href="mailto:navyaratna.deepika14@gmail.com" title="">Move the cursor here</a> 
 	<!--Comments-->
 		<p>Hello</p>
+		<img src="taylor.jpg" height="150" />
+		<br />
 
 		<a href="http://google.com"><img src="taylor.jpg" height="150"/></a>
 
