--- a/13.child_selector.html
+++ b/13.child_selector.html
@@ -13,5 +13,6 @@
 	<a href="https://www.google.com">first</a>
 	<p><a href="https://www.google.com">Second</a> and we have it <a href="">here</a></p>
 	<h3><a href="https://www.google.com">Third</a></h3>
+	<a href="http://www.w3schools.com/cssref/css_selectors.asp">For more click me</a>
 </body>
 </html>
