--- a/15.External_SS/first.html
+++ b/15.External_SS/first.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
+<!--Overriding-last implementation will be displayed(<link> given first and <style> next, so style is choosen)-->
 <head>
 	<link rel="stylesheet" type="text/css" href="navya.css">
+
+	<style type="text/css"> 
+		h1 {
+			color: pink;
+		}
+	</style>
 </head>
 <body>
 <h1>Hello this is Index page</h1>
